Fix declaration of image to use asset helper

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1 id="wak">wak</h1>
-<img id="wak-img" src="/assets/gunther.png" alt="Gunther from Adventure Time">
+<%= image_tag 'gunther.png',
+    id: 'wak-img',
+    alt: 'Gunther from Adventure Time' %>
