Lay down the basic page structure and style
Remove gunther and his wak. Add navigation, controls, guided canvas, and
shortcuts sections. Add about modal. Add link to source. Add link to
entry on Rails Rumble.

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -2,11 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#wak
-  text-align: center
+body.modal-open
+  margin: 0
 
-#wak-img
-  display: block
-  margin: 0 auto
-  width: 80px
-  height: auto
+.container
+  padding-left: 30px
+  padding-right: 30px
+  max-width: none
+
+#guided-canvas
+  width: 100%
+  height: 100%
+
+#shortcuts h5
+  width: 70%
+#shortcuts dl > dt
+  font-weight: normal
+  width: 70%
+#shortcuts dl > dd
+  margin-left: 85%
