--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>DrawYourData</title>
   <%= stylesheet_link_tag "application", media: "all",
@@ -8,6 +8,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<%= render 'layouts/navigation' %>
 
 <%= yield %>
 
