--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,46 @@
-<h1 id="wak">wak</h1>
-<%= image_tag 'gunther.png',
-    id: 'wak-img',
-    alt: 'Gunther from Adventure Time' %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3" id="controls">
+      <div class="row" id="controls-data">
+        <h5 class="text-info">Data</h5>
+      </div>
+      <div class="row" id="controls-steps">
+        <h5 class="text-info">Steps</h5>
+      </div>
+    </div>
+    <div class="col-xs-8 jumbotron" id="guided">
+      <canvas id="guided-canvas">Your browser is not supported.</canvas>
+    </div>
+    <div class="col-xs-1" id="shortcuts">
+      <div class="row">
+        <h5 class="text-info text-right">Draw</h5>
+        <dl class="dl-horizontal">
+          <dt class="text-muted">line</dt>
+          <dd><strong>x</strong></dd>
+          <dt class="text-muted">rect</dt>
+          <dd><strong>r</strong></dd>
+          <dt class="text-muted">circle</dt>
+          <dd><strong>c</strong></dd>
+        </dl>
+      </div>
+      <div class="row">
+        <h5 class="text-info text-right">Adjust</h5>
+        <dl class="dl-horizontal">
+          <dt class="text-muted">move</dt>
+          <dd><strong>v</strong></dd>
+          <dt class="text-muted">scale</dt>
+          <dd><strong>s</strong></dd>
+          <dt class="text-muted">rotate</dt>
+          <dd><strong>e</strong></dd>
+        </dl>
+      </div>
+      <div class="row">
+        <h5 class="text-info text-right">Flow</h5>
+        <dl class="dl-horizontal">
+          <dt class="text-muted">loop</dt>
+          <dd><strong>l</strong></dd>
+        </dl>
+      </div>
+    </div>
+  </div>
+</div>
