Use section element for controls and shortcuts

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,18 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-3" id="controls">
-      <div class="row" id="controls-data">
+      <section class="row" id="controls-data">
         <h5 class="text-info">Data</h5>
-      </div>
-      <div class="row" id="controls-steps">
+      </section>
+      <section class="row" id="controls-steps">
         <h5 class="text-info">Steps</h5>
-      </div>
+      </section>
     </div>
     <div class="col-xs-8 jumbotron" id="guided">
       <canvas id="guided-canvas">Your browser is not supported.</canvas>
     </div>
     <div class="col-xs-1" id="shortcuts">
-      <div class="row">
+      <section class="row">
         <h5 class="text-info text-right">Draw</h5>
         <dl class="dl-horizontal">
           <dt class="text-muted">line</dt>
@@ -22,8 +22,8 @@
           <dt class="text-muted">circle</dt>
           <dd><strong>c</strong></dd>
         </dl>
-      </div>
-      <div class="row">
+      </section>
+      <section class="row">
         <h5 class="text-info text-right">Adjust</h5>
         <dl class="dl-horizontal">
           <dt class="text-muted">move</dt>
@@ -33,14 +33,14 @@
           <dt class="text-muted">rotate</dt>
           <dd><strong>e</strong></dd>
         </dl>
-      </div>
-      <div class="row">
+      </section>
+      <section class="row">
         <h5 class="text-info text-right">Flow</h5>
         <dl class="dl-horizontal">
           <dt class="text-muted">loop</dt>
           <dd><strong>l</strong></dd>
         </dl>
-      </div>
+      </section>
     </div>
   </div>
 </div>
