--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -14,10 +14,13 @@ body.modal-open
   width: 100%
   height: 100%
 
-#shortcuts h5
+#shortcuts h5,
+#shortcuts dl > dt
   width: 70%
+
 #shortcuts dl > dt
   font-weight: normal
-  width: 70%
+  cursor: pointer
+
 #shortcuts dl > dd
   margin-left: 85%
