--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,16 +9,19 @@
       </section>
     </div>
     <div class="col-xs-8 jumbotron" id="guided">
+      <h5 class="text-center" id="guided-step">
+        select a tool by shortcut or click
+      </h5>
       <canvas id="guided-canvas">Your browser is not supported.</canvas>
     </div>
     <div class="col-xs-1" id="shortcuts">
       <section class="row">
         <h5 class="text-info text-right">Draw</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted">line</dt>
-          <dd><strong>x</strong></dd>
           <dt class="text-muted">rect</dt>
           <dd><strong>r</strong></dd>
+          <dt class="text-muted">line</dt>
+          <dd><strong>d</strong></dd>
           <dt class="text-muted">circle</dt>
           <dd><strong>c</strong></dd>
         </dl>
@@ -27,7 +30,7 @@
         <h5 class="text-info text-right">Adjust</h5>
         <dl class="dl-horizontal">
           <dt class="text-muted">move</dt>
-          <dd><strong>v</strong></dd>
+          <dd><strong>x</strong></dd>
           <dt class="text-muted">scale</dt>
           <dd><strong>s</strong></dd>
           <dt class="text-muted">rotate</dt>
