Add color to #guided-step, border to #guided-canvas

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,9 +9,8 @@
       </section>
     </div>
     <div class="col-xs-8 jumbotron" id="guided">
-      <h5 class="text-center" id="guided-step">
-        select a tool by shortcut or click
-      </h5>
+      <h5 class="alert alert-step text-center"
+          id="guided-step">select a tool by shortcut or click</h5>
       <canvas id="guided-canvas">Your browser is not supported.</canvas>
     </div>
     <div class="col-xs-1" id="shortcuts">
