--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -10,9 +10,14 @@ body.modal-open
   padding-right: 30px
   max-width: none
 
+.alert-step
+  color: #C09853
+  background-color: #FCF8E3
+  border-color: #FBEED5
 #guided-canvas
   width: 100%
   height: 100%
+  border: solid 1px #999999
 
 #shortcuts h5,
 #shortcuts dl > dt
