Add snap point visual for draw action
Create Canvas, Shape, and SnapPoint objects as modules. Loading 9
SnapPoints onto Canvas and showing then drawing action is selected.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,9 @@
     <div class="col-xs-8 jumbotron" id="guided">
       <h5 class="alert alert-step text-center"
           id="guided-step">select a tool by shortcut or click</h5>
-      <canvas id="guided-canvas">Your browser is not supported.</canvas>
+      <canvas id="guided-canvas" width="800px" height="400px">
+        Your browser is not supported.
+      </canvas>
     </div>
     <div class="col-xs-1" id="shortcuts">
       <section class="row">
