Fix tool clicks and canvas rendering
Tool clicks were not triggering drawing of SnapPoints, so using data
attributes to ensure the proper keywords are sent. Canvas was redrawing
over the old canvas with every tool selection - now gets cleared to
prevent weird layering.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,29 +19,36 @@
       <section class="row">
         <h5 class="text-info text-right">Draw</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted">rect</dt>
+          <dt class="text-muted"
+              data-action="draw" data-tool="rect">rect</dt>
           <dd><strong>r</strong></dd>
-          <dt class="text-muted">line</dt>
+          <dt class="text-muted"
+              data-action="draw" data-tool="line">line</dt>
           <dd><strong>d</strong></dd>
-          <dt class="text-muted">circle</dt>
+          <dt class="text-muted"
+              data-action="draw" data-tool="circle">circle</dt>
           <dd><strong>c</strong></dd>
         </dl>
       </section>
       <section class="row">
         <h5 class="text-info text-right">Adjust</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted">move</dt>
+          <dt class="text-muted"
+              data-action="adjust" data-tool="move">move</dt>
           <dd><strong>x</strong></dd>
-          <dt class="text-muted">scale</dt>
+          <dt class="text-muted"
+              data-action="adjust" data-tool="scale">scale</dt>
           <dd><strong>s</strong></dd>
-          <dt class="text-muted">rotate</dt>
+          <dt class="text-muted"
+              data-action="adjust" data-tool="rotate">rotate</dt>
           <dd><strong>e</strong></dd>
         </dl>
       </section>
       <section class="row">
         <h5 class="text-info text-right">Flow</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted">loop</dt>
+          <dt class="text-muted"
+              data-action="flow" data-tool="loop">loop</dt>
           <dd><strong>l</strong></dd>
         </dl>
       </section>
