Highlight selected tool and refactor keydowns
Add class on selection of tool that changes background color. Keydown
events now trigger click events for cleaner choosing of tools.

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -11,9 +11,13 @@ body.modal-open
   max-width: none
 
 .alert-step
-  color: #C09853
-  background-color: #FCF8E3
-  border-color: #FBEED5
+  color: #c09853
+  background-color: #fcf8e3
+  border-color: #fbeed5
+
+.label-step
+  color: #fafafa
+  background-color: #f0ad4e
 
 #guided-canvas
   width: 100%
