--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,13 +19,13 @@
       <section class="row">
         <h5 class="text-info text-right">Draw</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-draw-rect"
               data-action="draw" data-tool="rect">rect</dt>
           <dd><strong>r</strong></dd>
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-draw-line"
               data-action="draw" data-tool="line">line</dt>
           <dd><strong>d</strong></dd>
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-draw-circle"
               data-action="draw" data-tool="circle">circle</dt>
           <dd><strong>c</strong></dd>
         </dl>
@@ -33,13 +33,13 @@
       <section class="row">
         <h5 class="text-info text-right">Adjust</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-adjust-move"
               data-action="adjust" data-tool="move">move</dt>
           <dd><strong>x</strong></dd>
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-adjust-scale"
               data-action="adjust" data-tool="scale">scale</dt>
           <dd><strong>s</strong></dd>
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-adjust-rotate"
               data-action="adjust" data-tool="rotate">rotate</dt>
           <dd><strong>e</strong></dd>
         </dl>
@@ -47,7 +47,7 @@
       <section class="row">
         <h5 class="text-info text-right">Flow</h5>
         <dl class="dl-horizontal">
-          <dt class="text-muted"
+          <dt class="text-muted" id="shortcut-flow-loop"
               data-action="flow" data-tool="loop">loop</dt>
           <dd><strong>l</strong></dd>
         </dl>
