--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -15,7 +15,7 @@ body.modal-open
   background-color: #fcf8e3
   border-color: #fbeed5
 
-.label-step
+.highlight-tool
   color: #fafafa
   background-color: #f0ad4e
 
