--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -19,6 +19,15 @@ body.modal-open
   color: #fafafa
   background-color: #f0ad4e
 
+#controls-data dl > dt
+  text-align: left
+  width: 20%
+
+#controls-data dl > dd
+  width: 70%
+  margin: 0
+  overflow: scroll
+
 #guided-canvas
   width: 100%
   height: 100%
