--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,32 @@
     <div class="col-xs-3" id="controls">
       <section class="row" id="controls-data">
         <h5 class="text-info">Data</h5>
+        <dl class="dl-horizontal">
+          <dt class="text-muted" id="controls-data-input"><br><br>input</dt>
+          <dd>
+            <table class="table table-bordered table-condensed">
+              <thead>
+                <tr>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                  <th>4</th>
+                  <th>5</th>
+                  <th>6</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>4</td>
+                  <td>8</td>
+                  <td>6</td>
+                  <td>2</td>
+                  <td>7</td>
+                  <td>5</td>
+                </tr>
+              </tbody>
+            </table>
+          </dd>
       </section>
       <section class="row" id="controls-steps">
         <h5 class="text-info">Steps</h5>
