--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -32,6 +32,7 @@ body.modal-open
   width: 100%
   height: 100%
   border: solid 1px #999999
+  cursor: crosshair !important
 
 #shortcuts h5,
 #shortcuts dl > dt
