--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,18 @@
 
 <%= yield %>
 
+<script type="text/javascript">
+  var rumbleBannerBackgroundColor,
+      rumbleBannerTextColor,
+      rumbleBannerLinkColor,
+      rumbleBannerPlacement;
+  rumbleBannerBackgroundColor = "#f8f8f8";
+  rumbleBannerTextColor = "#777777";
+  rumbleBannerLinkColor = "##3a87ad";
+  rumbleBannerPlacement = "bottom";
+</script>
+<script src="http://s0.railsrumble.com/banner.js"
+        type="text/javascript"></script>
+
 </body>
 </html>
